# simple-avif-reader

./: .gitignore  Cargo.toml
aom-av1/: Cargo.toml  build.rs
aom-av1/src/: ctype.rs  decode.rs  encode.rs  image.rs  lib.rs
avif-parser/: Cargo.toml
avif-parser/src/: lib.rs
src/: main.rs
