[package]
name = "aom-binding-test"
version = "0.1.0"
authors = ["Damezuma <qweads12@gmail.com>"]
edition = "2018"
[build]
target="x86_64-pc-windows-msvc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
avif-parser = {path="./avif-parser"}
aom-av1-sys  = {path="./aom-av1"}
cvt_yuv_rgb = {path="../rs-simple-cvt-yuv-rgb/cvt_yuv_rgb"}
bmp = "0.5.0"